avoid dark mode disappearing border

--- a/assets/css/puchi.css
+++ b/assets/css/puchi.css
@@ -172,7 +172,7 @@
     table-layout: fixed !important;
     width: 50px !important;
     margin: auto !important;
-    border: 1px solid black;
+    border: 1px solid grey;
     border-collapse: separate;
 }
 
